# mousehash

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  k-tuple.md  meta-algorithms.md  mousehash_fastmcp_architecture.md  note.txt  notes.txt  pyproject.toml  setup.py
RSAAnalysis/: README.md  __init__.py  spike_trial_rsa.py
dandi_mcp/: server.py
docs/: architecture.md
ophys_experiment_data/: 652989705.nwb
scripts/: build_reports.py  ingest_image_folder.py  ingest_natural_scenes.py  inspect_schema.py  plot_cell_dff_natural_scenes.py  run_allen_v0.py  run_coordinator.py  run_dandi_agent.py  seed_lookup_tables.py  setup_schema.py  ui.py
tests/: conftest.py  test_allen_adapter.py  test_artifacts.py  test_blahml.py  test_blahml_executor_pca.py  test_blahml_models.py  test_blahml_question_engine.py  test_cache.py  test_cell_activity_timepoint_labels.py  test_contracts.py  test_core_types.py  test_dandi_agent_models.py  test_dandi_agent_readiness.py  test_dandi_agent_tools.py  test_factor_models.py  test_group_comparison.py  test_image_compression.py  test_logistic_decoder.py  test_manifests.py  test_mcp_analysis_tools.py  test_mcp_compare_jpeg.py  test_mcp_decoder_tools.py  test_mcp_errors.py  test_mcp_manifest_tools.py  test_mcp_pipeline_tools.py  test_mcp_report_tools.py  test_mcp_schedule_tools.py  test_mcp_server.py  test_mcp_target_tools.py  test_mcp_transformation_tools.py  test_mcp_view_tools.py  test_mcp_views.py  test_neural_event_responses.py  test_nmf_heatmap_thumbnail_gating.py  test_pipeline_v0.py  test_reports.py  test_schedule_comparison.py  test_stimulus_schedule.py  (+1 more)
(+178 files in other folders)
